--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>image-uploader</title>
+  <title>image-uploader for wechat</title>
   <style>
     html,
     body {
